Update courtship login page.html

--- a/courtship login page.html
+++ b/courtship login page.html
@@ -45,7 +45,7 @@
 		 </form>	
 		   <br />
 	 <br />
-	 <a href="Courtship website.html" class="btn btn-blue btn-sm" role="button">Back</a>
+	 <a href="index.html" class="btn btn-blue btn-sm" role="button">Back</a>
 	 </center>
 	 
 	 
