--- a/Courtship form(1).html
+++ b/Courtship form(1).html
@@ -140,6 +140,6 @@
 	<br/>
 	 <button type="submit">Submit</button>
 </div>
-<center><a href="Courtship website.html" class="btn btn-blue btn-sm" role="button">Back</a></center></center>
+<center><a href="index.html" class="btn btn-blue btn-sm" role="button">Back</a></center></center>
 </body>
 </html>
