--- a/Courtship form(1).html
+++ b/Courtship form(1).html
@@ -8,7 +8,7 @@
 	 	 }
 </style>
 </head>
-	 <meta name="viewport" content="width=device-width" initial-scale="1">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <meta charset="UTF-8">
 <center><img src="courtship logo.png" height="50px" width="50px"></center>
 <center><h2 style="background-color: pink;">COURTSHIP ADVICE</h2></center>
