--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 	   }
 	 	</style>
 	</head>
-	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<body>
 	  <center><img src="20190910_102521.png" alt="Courtship Advice" style="width: 100px; height: 100px;"></center>
