--- a/courtship login page.html
+++ b/courtship login page.html
@@ -8,7 +8,7 @@
 		}
 	 </style>
 </head>
-	 <meta name="viewport" content="width=device-width" initial-scale="1">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <meta charset="UTF-8">
 <body>
 	 <center><img src="pixelLab/20191006_170956.png" style="width: 120px; height: 120px;"></center>
